# video-translate

./: .gitignore  README.md  open_project.bat  pyproject.toml
configs/: default.toml  glossary.en-tr.json
configs/profiles/: gtx1650_espeak.toml  gtx1650_fast.toml  gtx1650_i5_12500h.toml  gtx1650_piper.toml  gtx1650_strict.toml  m1_medium_cpu.toml  m1_small_cpu.toml
docs/: ui-demo.md  ui.md
docs/milestones/: m1.md  m2.md  m3.md
downloads/m1_20260220_053907/: quality_summary.tr.json
downloads/m1_20260220_083154/: quality_summary.tr.json
downloads/m1_20260220_113449/: quality_summary.tr.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/video_translate/: __init__.py  cli.py  config.py  io.py  models.py  preflight.py  ui.py  ui_demo.py
src/video_translate/asr/: __init__.py  whisper.py
src/video_translate/ingest/: __init__.py  audio.py  youtube.py
src/video_translate/pipeline/: __init__.py  delivery.py  m1.py  (+11 more)
tests/: test_asr_fallback.py  test_commands.py  test_config.py  test_delivery.py  test_full_run_pipeline.py  test_glossary.py  test_io.py  test_m2_benchmark.py  test_m2_pipeline.py  test_m2_prep.py  test_m2_qa_report.py  test_m3_benchmark.py  test_m3_closure.py  test_m3_espeak_tune.py  test_m3_finalize.py  test_m3_pipeline.py  test_m3_prep.py  test_m3_qa_report.py  test_m3_tuning_report.py  test_manifest.py  test_preflight.py  test_qa_report.py  test_subprocess_utils.py  test_translate_backends.py  test_translate_contracts.py  test_tts_backends.py  test_ui.py  test_ui_demo.py
(+12 files in other folders)
