[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "video-translate"
version = "0.1.0"
description = "Local, API-free pipeline for EN-to-TR dubbing workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "video-translate contributors" }]
dependencies = [
  "faster-whisper>=1.1.1",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]
m2 = [
  "torch>=2.7.0",
  "transformers>=4.54.0",
  "sentencepiece>=0.2.0",
]

[project.scripts]
video-translate = "video_translate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_translate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["video_translate"]
